--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@
 Aspen Captital Take Home Project
 ================================
 
-Provision using cdk
-
 Add unique name to cdk stack
 
 Setup IAM on AWS?
@@ -31,3 +29,15 @@ Use ECR / Docker.io
 Use yaml for resources
 
 Add environmental variables for cdk
+
+Add logging
+
+-----------
+References:
+===========
+
+https://ashwin9798.medium.com/nginx-with-docker-and-node-js-a-beginners-guide-434fe1216b6b
+
+https://medium.com/@vinodkrane/microservices-scaling-and-load-balancing-using-docker-compose-78bf8dc04da9
+
+https://bobbyhadz.com/blog/aws-cdk-ec2-instance-example
